--- a/configure.ac
+++ b/configure.ac
@@ -27,14 +27,14 @@ IT_PROG_INTLTOOL([0.35.0])
 
 
 AM_PROG_LIBTOOL
-
+AC_SEARCH_LIBS([pow], [m])
 
 
 PKG_CHECK_MODULES(FENCES, [gtk+-2.0 >= 2.8 gthread-2.0])
 AC_SUBST(FENCES_CFLAGS)
 AC_SUBST(FENCES_LIBS)
 
-
+AM_LDFLAGS = -lm
 
 
 AC_OUTPUT([
